--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "gradient-string": "^1.2.0",
     "massive": "^6.1.4",
     "react": "^16.12.0",
@@ -18,7 +20,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "session": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
