--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-promise-middleware": "^6.1.2",
     "session": "^0.1.0"
   },
   "scripts": {
